CSS fix for vertical align images on services page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6684,10 +6684,10 @@ a:focus {
     max-height: 100%; }
 
 /* Vertical align coop logos on services pages */
-.services #grid .column .coop-thumb {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.service #grid .coop-thumb {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .has-tip {
